Revert "Sandpack error icon overlapping issue fix (#4302)"
This reverts commit cd1717bfbd1d11405da36a2ceb1fa478b08afbdb.

--- a/beta/src/styles/sandpack.css
+++ b/beta/src/styles/sandpack.css
@@ -93,8 +93,9 @@ html.dark .sp-tabs .sp-tab-button[data-active='true'] {
 }
 
 .sp-code-editor .cm-errorLine:after {
-  position: relative;
-  top: 1px;
+  position: absolute;
+  right: 8px;
+  top: 0;
   content: '\26A0';
   font-size: 22px;
   line-height: 16px;
